@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<AppInfo>
+  <Summary>Sets up your desktop when you log in, and lets you log out again</Summary>
+  <About>
+    <Purpose>Session Manager</Purpose>
+    <Version>0.1.13 PREVIEW</Version>
+    <Author>Thomas Leonard</Author>
+    <License>GNU General Public License</License>
+    <Homepage>http://rox.sourceforge.net</Homepage>
+  </About>
+  <AppMenu>
+    <Item option='--setup' label='Auto Start...'/>
+  </AppMenu>
+</AppInfo>
