@@ -1,4 +1,0 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<AppMenu>
-  <Item option='--setup' label='Auto Start...'/>
-</AppMenu>
